Fixed second horizontal scrollbar (removed)

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,7 +3,7 @@
 @import "variables";
 
 // Structure
-div.window {width: 100vw;}
+div.window {width: 100%;}
 .homeLeft, .homeRight {
     padding: 1ch;
     padding-bottom: 2em;
@@ -165,6 +165,11 @@ span.sec {
             grid-column: 2 / span 2;
             background-color: $white;
         }
+    }
+
+    .footer {
+        padding-left: 0;
+        padding-right: 0;
     }
 
     // Flare
